--- a/Task2/style.css
+++ b/Task2/style.css
@@ -2,6 +2,11 @@ body{
     background-image: url(img/Bakcground.jpg) ;
     background-size: 100%;
 }
+.title{
+    text-align: center;
+    font-size: 70px;
+    padding-right: 5%;
+}
 .back{
     width: 60%;
     height: 250px;
