--- a/Task1/style.css
+++ b/Task1/style.css
@@ -1,9 +1,9 @@
 .Back{
     width: 60%;
-    height: 50%;
-    min-height: 300px;
     background: gainsboro;
     padding-top: 10px;
+    padding-bottom: 10px;
+    float: left;
 }
 .left-col,
 .right-col
@@ -15,6 +15,7 @@
     float: left;
 }
 .left-col{
+    padding-left: 10px;
     padding-right: 10px;
     border-right: 5px solid coral;
 }
