--- a/Task2/style.css
+++ b/Task2/style.css
@@ -5,18 +5,17 @@ body{
 .title{
     text-align: center;
     font-size: 70px;
-    padding-right: 5%;
 }
 .back{
-    width: 60%;
-    height: 250px;
+    width: 80%;
     padding: 10% 20%;
+    float: left;
 }
 .right-col
 {
     width: 25%;
     min-width: 180px;
-    height: 100%;
+    height: 250px;
     box-sizing: border-box;
     float: left;
     padding-top: 10px;
@@ -37,10 +36,9 @@ body{
     max-height: 70%;
 }
 .textimg{
-    display: table-cell;
     position: absolute;
     text-align: justify;
     max-height: 180px;
     width: 90%;
-    bottom: 0%;
+    bottom: 0;
 }
