--- a/Task1/style.css
+++ b/Task1/style.css
@@ -29,3 +29,10 @@
     text-align: right;
     padding-right: 10%;
 }
+.text{
+    display: inline-block;
+    font-size: 40px;
+    vertical-align: top;
+    width: 50%;
+    margin: 0;
+}
