--- a/Task2/style.css
+++ b/Task2/style.css
@@ -5,10 +5,10 @@ body{
 .title{
     text-align: center;
     width: 90%;
-    font-size: 70px;
+    font-size: 300%;
 }
 .back{
-    width: 70%;
+    align-content: center;
     padding: 10% 20%;
     float: left;
 }
