--- a/Task2/style.css
+++ b/Task2/style.css
@@ -1,34 +1,34 @@
 body{
-    background-image: url(img/Bakcground.jpg) ;
+    background-image: url(img/Background.jpg) ;
     background-size: 100%;
 }
 .title{
     text-align: center;
-    width: 90%;
-    font-size: 300%;
+    font-size: 200%;
+}
+hr{
+    width: 30%;
 }
 .back{
     align-content: center;
-    padding: 10% 20%;
+    padding: 5% 10%;
     float: left;
 }
 .right-col
 {
-    width: 25%;
-    height: 350px;
+    width: 215px;
+    height: 250px;
     box-sizing: border-box;
     float: left;
     padding-top: 10px;
     padding-left: 10px;
     background: white;
     vertical-align: bottom;
-
-}
-.right-col{
-    padding-left: 10px; /* отступ слева */
+    padding-left: 10px;
     padding-right: 10px;
     margin: 20px;
     position: relative;
+
 }
 .img{
     width: 100%;
@@ -37,8 +37,9 @@ body{
 }
 .textimg{
     position: absolute;
-    text-align: justify;
+    text-align: center;
     max-height: 180px;
-    width: 90%;
+    padding-right: 10px;
+    margin-bottom: 0;
     bottom: 0;
 }
